name:                left-recursion
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glebec/left-recursion#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Lebec
maintainer:          glebec@gmail.com
copyright:           2019 Gabriel Lebec
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable left-recursion
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
